--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-
+        "aura/router": "^2.2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*"
